--- a/company-web/src/Components/navbar/navbar.css
+++ b/company-web/src/Components/navbar/navbar.css
@@ -1,13 +1,22 @@
 nav{
-    height: 5rem;
+    height: 3.5rem;
     width: 100vw;
-    background: var(--color-primary);
-    display: grid;
+   display: grid;
     place-items: center;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 99;
+}
+.company__logo{
+    font-size:2rem;
+    font-weight: 500;
+    color: var(--color-secondary);
+    opacity: .7;
+    transition: color 0.2s ease-in;
+}
+.company__logo:hover{
+    color: var(--color-gray-300);
 }
 .nav__toggle-btn{
     display: none;
@@ -21,11 +30,15 @@ nav{
 }
 
 .icon-logo{
-    width: 7rem;
+    width: 3.5rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+
 }
-.nav__links{
+.nav__links {
     display: flex;
     gap: 3.5rem;
+    
     align-items: center;
 }
 .nav__links a{
@@ -40,53 +53,117 @@ nav{
 .active-nav::after{
     content: '';
     display: block;
-    width: 1.2rem;
-    height: 1.2rem;
-    background: var(--color-primary);
+    width: 1rem;
+    height: 1rem;
+    background: var(--color-gray-400);
     position: absolute;
-    left: calc(50% - 0.6rem);
+    left: calc(50% - 0.5rem);
     transform: rotate(45deg);
-    margin-top: 0.9rem ;
+    margin-top: .3rem ;
+}
+
+.nav__links li:nth-child(2){
+    animation-delay: 200ms;
+}
+.nav__links li:nth-child(3){
+    animation-delay: 400ms;
+
+}
+.nav__links li:nth-child(4){
+    animation-delay: 600ms;
+
+}
+.nav__links li:nth-child(5){
+    animation-delay: 800ms;
+}
+.nav__links li:nth-child(6){
+    animation-delay: 1s;
+}
+.nav__links li:nth-child(7){
+    animation-delay: 1.2s;
 }
 
 
 @media screen and (max-width: 1024px){
     .nav__toggle-btn{
         display: inline-block;
+        margin-left: 2rem;
+    
         background: transparent;
         font-size: 1.8rem;
         cursor: pointer;
 
     }
     .nav__toggle-btn svg{
-        color: var(--color-gray-100);
+        color: var(--color-gray-200);
     }
     .nav__links{
         position: absolute;
         top:100%;
         right: 0;
         flex-direction:column ;
-        gap: 0;
+        gap:0;
+        perspective: 400px;
+    }
+    .company__logo{
+        font-size: 3rem;
+        opacity:1 ;
+
     }
     .active-nav, .active-nav::after{
         display: none;
     }
     .nav__links li{
-        height: 4rem;
-        width: 100%;
-        box-sizing: -2rem 2rem 5rem rgba(0 0 0 0.4);
+        height: 5rem;
+        width: 50%;
+        box-sizing: -1rem 1rem 3rem rgba(0 0 0 0.4);
+        animation: navAnimation 600ms ease-out forwards;
+        transform: rotateX(90deg);
+        opacity: 0;
+        transform-origin:top ;
+    }
+    
+    .nav__links li:nth-child(2){
+        animation-delay: 150ms;
+    }
+    .nav__links li:nth-child(3){
+        animation-delay: 250ms;
+
+    }
+    .nav__links li:nth-child(4){
+        animation-delay: 450ms;
+
+    }
+    .nav__links li:nth-child(5){
+        animation-delay: 650ms;
+    }
+    .nav__links li:nth-child(6){
+        animation-delay: 1s;
+    }
+    .nav__links li:nth-child(7){
+        animation-delay: 1.2s;
+    }
+
+    @keyframes navAnimation {
+        to{
+            transform: rotateX(0);
+            opacity: 1;
+        }
+        
     }
     .nav__links li a {
-        background-color: var(--color-primary);
+        background-color: var(--color-gray-400);
         height: 100%;
         width: 100%;
-        display: flex;
+        display: inline-block;
         align-items: center;
-        padding: 1rem 5rem 1rem 3rem ;
+        padding: 1rem 5rem 3rem 5rem ;
 
     }
     .show__nav{
         display: flex;
+        flex-direction: column;
+        
     }
     .hide__nav{
         display: none;
