--- a/company-web/src/Pages/About/about.css
+++ b/company-web/src/Pages/About/about.css
@@ -1,69 +1,102 @@
-
 .about {
-    width: 80vw;
+    width: 100vw;
     height: 100vh;
-    margin: 0;
-    background: linear-gradient(10deg, rgb(160, 255, 255), transparent);
-   text-align: center;
-   white-space: wrap;
-   display: inline-block;
-   position: absolute;
-   border-radius: 10px;
-   box-shadow: inset;
-   transition: var(--transition);
-   
+    margin-left: 5rem;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--color-gray-600);
+    white-space: wrap;
+    display: grid;
+    position: relative;
+}
 
+.about__image {
+    width: 100vw;
+    display: grid;
+    
+    position: relative;
+    margin-top: 20rem;
+    border-radius: 25%;
+    filter: brightness(90%);
 
 }
+
+
 
 
 
 
 .about__header-left {
     margin-top: 5rem;
+    text-align: center;
     margin-bottom: 1.5rem;
 
 
 }
 
 .about__header-left p {
-    margin: 3rem 0 2.5rem;
-    color:var(--color-secondary);
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    color: var(--color-secondary);
     line-height: 1.5;
     text-align: center;
     font-weight: 100;
     font-size: 1.2rem;
-    
-    
+
+
 
 }
 
 
-
-.about__h2 {
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
-    opacity: .8;
-    color:var(--color-gray-100);
-    
-    white-space: nowrap;
-}
-.about__h4{
-    font-size: 1.2rem;
-    font-weight: 350;
-    text-align: start;
-    margin-left: 2rem;
-    text-decoration:underline;
-    margin-bottom: 1.5rem;
-}
-.btn__lg{
-    padding: .7rem 1.7rem;
-    font-size: 1rem;
-    border-radius: 20px;
-     background: var(--color-primary);
-    transition: var(--transition);
-        
+.about__h3 {
+    margin-right: 15rem;
+    margin-bottom: 1rem;
+    padding-top: 1rem;
+    font-style: oblique 80deg;
+    font-size: 2rem;
+    font-weight: 500;
+    text-decoration: underline;
 }
 
 
+.btn.lg{
+    display: grid;
+    position:relative;
+}
+
+@media screen and (max-width: 1024px) {
+    .about {
+        height: fit-content;
+        margin-top: -5rem;
+        margin-left: -10px;
+        padding: 12rem 0;
+        white-space: wrap;
+    }
+
+    .about__image {
+        width: fit-content;
+        height: 100vh;
+        position: relative;
+        filter: brightness(75%);
+        transition: var(--transition);
+
+    }
+    .about__header-left p{
+        width: 100vw;
+        margin-left: 10rem;
+        text-align: start;
+        font-size: 1.2rem;
+        display: grid;
+
+    }
+
+    .btn {
+        padding: 1rem 2rem;
+        margin-top: 2.5rem;
+       font-size: 1rem;
+        position: absolute;
+    }
+
+
+
+}
