--- a/company-web/src/Components/navbar/navbar.css
+++ b/company-web/src/Components/navbar/navbar.css
@@ -86,7 +86,7 @@ nav{
 
 @media screen and (max-width: 1024px){
     .nav__toggle-btn{
-        display: inline-block;
+        display: inline;
         margin-left: 2rem;
     
         background: transparent;
@@ -114,9 +114,9 @@ nav{
         display: none;
     }
     .nav__links li{
-        height: 5rem;
-        width: 50%;
-        box-sizing: -1rem 1rem 3rem rgba(0 0 0 0.4);
+        height: 3.5rem;
+        width: 25%;
+        box-sizing: -2rem -2rem 3rem rgba(0 0 0 0.4);
         animation: navAnimation 600ms ease-out forwards;
         transform: rotateX(90deg);
         opacity: 0;
@@ -157,7 +157,7 @@ nav{
         width: 100%;
         display: inline-block;
         align-items: center;
-        padding: 1rem 5rem 3rem 5rem ;
+        padding: 1rem 5rem 3rem 3rem ;
 
     }
     .show__nav{
