--- a/company-web/src/Pages/About/about.css
+++ b/company-web/src/Pages/About/about.css
@@ -11,13 +11,18 @@
 }
 
 .about__image {
-    width: 100vw;
+    width: 80vw;
     display: grid;
     
     position: relative;
     margin-top: 20rem;
     border-radius: 25%;
     filter: brightness(90%);
+    transition: transform 1s;
+
+}
+.about__image:hover{
+    transform: translate(10%, 10%) scale(1);
 
 }
 
@@ -61,12 +66,21 @@
 
 .btn.lg{
     display: grid;
+    margin-top: 2rem;
     position:relative;
 }
+.btn__home{
+    background:var(--color-secondary);
+}
+.btn__home:hover{
+    background: var(--color-gray-200);
+}
+
 
 @media screen and (max-width: 1024px) {
     .about {
         height: fit-content;
+        
         margin-top: -5rem;
         margin-left: -10px;
         padding: 12rem 0;
@@ -74,28 +88,36 @@
     }
 
     .about__image {
-        width: fit-content;
-        height: 100vh;
+        width: 95vw;
+        height: 80vh;
+        margin-left: 1rem;
         position: relative;
         filter: brightness(75%);
         transition: var(--transition);
 
     }
+    .about__h3{
+       margin-bottom: -1rem;
+        margin-left: 5rem;
+
+    }
     .about__header-left p{
-        width: 100vw;
-        margin-left: 10rem;
-        text-align: start;
+        width: 90vw;
+        margin-left: 1rem;
+        text-align: center;
         font-size: 1.2rem;
         display: grid;
 
     }
 
     .btn {
+       
         padding: 1rem 2rem;
         margin-top: 2.5rem;
        font-size: 1rem;
-        position: absolute;
+       position: absolute;
     }
+    
 
 
 
