--- a/company-web/src/Pages/Home/home.css
+++ b/company-web/src/Pages/Home/home.css
@@ -85,8 +85,7 @@
 @media screen and (max-width:1024px) {
     .main__header {
         height: fit-content;
-        margin-top: -5rem;
-        padding: 12rem 0;
+       padding: 12rem 0;
     }
 
     .main__header-container {
@@ -94,9 +93,9 @@
     }
 
     .main__header-circle {
-        width: 10rem;
-        margin-left: 2rem;
-        height: 10rem;
+        width: 16rem;
+        margin-left: 1rem;
+        height: 16rem;
     }
 
     .language__image {
@@ -106,7 +105,7 @@
     }
     .main__header-left p{
         font-size: 1.2rem;
-        margin-left: -1rem;
+        margin-left: 1rem;
         text-align: center;
         
     }
@@ -118,8 +117,20 @@
     }
 
 
-    .btn {
-        margin-top: 5rem;
-    }
 
+}
+@media screen and(max-width: 600px){
+    .main__header{
+        margin-top: 0;
+        padding: 12rem 0 0 ;
+        height: 100vh;
+
+    }
+    .main__header-iamge, .main__header-circle{
+        display: none;
+    }
+    .main__header-container{
+        grid-template-columns: 1fr;
+    }
+    
 }
