--- a/company-web/src/index.css
+++ b/company-web/src/index.css
@@ -91,7 +91,7 @@ img{
 }
 @media screen and (max-width:1024px ){
     .container{
-        width: var(--container-width-md);
+        width: var(--container-width-lg);
         
     }
     h1{
