--- a/company-web/src/Pages/About/about.css
+++ b/company-web/src/Pages/About/about.css
@@ -1,124 +1,89 @@
-.about {
+.about{
+    display: grid;
+    grid-template-columns: 200px 1fr 180px;
+    gap: 2rem;
+}
+.about__header{
     width: 100vw;
-    height: 100vh;
-    margin-left: 5rem;
-    justify-content: space-between;
+    height: fit-content;
+    margin-top:5rem;
+    justify-content: center;
     align-items: center;
-    background: var(--color-gray-600);
-    white-space: wrap;
-    display: grid;
-    position: relative;
 }
-
-.about__image {
-    width: 80vw;
-    display: grid;
+.about__image{
+      margin-top:5rem;
+    margin-bottom:-2rem;
     
+}
+.image{
+    width:50vw;
+    border-radius: 10px;
     position: relative;
-    margin-top: 20rem;
-    border-radius: 25%;
-    filter: brightness(90%);
-    transition: transform 1s;
-
+    transition: transform .5s;
 }
-.about__image:hover{
-    transform: translate(10%, 10%) scale(1);
-
+.image:hover{
+    transform:translate(10%, 20%) scale(.5); 
 }
-
-
-
-
-
-
-.about__header-left {
-    margin-top: 5rem;
-    text-align: center;
-    margin-bottom: 1.5rem;
-
-
+.about__company{
+    width: 25vw;
+    margin-top:2.5rem;
+    height: auto;
+    white-space: pre-wrap;
+    margin-left: 25rem;
+    text-align:center;
 }
-
-.about__header-left p {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    color: var(--color-secondary);
-    line-height: 1.5;
-    text-align: center;
-    font-weight: 100;
-    font-size: 1.2rem;
-
-
-
-}
-
-
-.about__h3 {
-    margin-right: 15rem;
-    margin-bottom: 1rem;
-    padding-top: 1rem;
-    font-style: oblique 80deg;
+.about__h3{
     font-size: 2rem;
-    font-weight: 500;
-    text-decoration: underline;
+    font-weight: 400;
+    color:var(--color-primary);
 }
-
-
-.btn.lg{
-    display: grid;
-    margin-top: 2rem;
-    position:relative;
+.p{
+    text-align:center;
+    font-size:1.5rem;
+    font-weight: 200;
+    line-height: 1.4;
+    color: #fff;
 }
-.btn__home{
-    background:var(--color-secondary);
+.about__website{
+    width: 25vw;
+    height: auto;
+    margin-top:1.2rem;
+    margin-left: 25rem;
 }
-.btn__home:hover{
-    background: var(--color-gray-200);
+.web__h3{
+    font-size:2rem;
+    font-weight: 400;
+    color: var(--color-primary);
+    text-align:center;
+
 }
-
-
-@media screen and (max-width: 1024px) {
-    .about {
-        height: fit-content;
+.web__p{
+    text-align:center;
+    font-size:1.5rem;
+    line-height: 1.4;
+    font-weight: 200;
+    color: #fff;
+}
+@media screen and (max-width: 768px){
+    .about{
+        display:inline-block;
         
-        margin-top: -5rem;
-        margin-left: -10px;
-        padding: 12rem 0;
-        white-space: wrap;
     }
-
-    .about__image {
-        width: 95vw;
-        height: 80vh;
-        margin-left: 1rem;
-        position: relative;
-        filter: brightness(75%);
-        transition: var(--transition);
-
+    .image{
+        margin-left: 2rem;
     }
-    .about__h3{
-       margin-bottom: -1rem;
+    .about__company{
+        width: 50vw;
+        margin-top:2rem;
+        height: auto;
+        white-space: pre-wrap;
         margin-left: 5rem;
-
+        text-align:center;
     }
-    .about__header-left p{
-        width: 90vw;
-        margin-left: 1rem;
-        text-align: center;
-        font-size: 1.2rem;
-        display: grid;
-
+    .about__website{
+        width: 50vw;
+        height: auto;
+        margin-top:1.2rem;
+        margin-left: 5rem;
     }
-
-    .btn {
-       
-        padding: 1rem 2rem;
-        margin-top: 2.5rem;
-       font-size: 1rem;
-       position: absolute;
-    }
-    
-
-
-
 }
