--- a/company-web/src/Pages/Home/home.css
+++ b/company-web/src/Pages/Home/home.css
@@ -2,6 +2,7 @@
     width: 100vw;
     height: 100vh;
     display: grid;
+    
     place-items: center;
     margin-top: 3rem;
 }
@@ -48,20 +49,9 @@
     position: relative;
 }
 
-.main__header-circle {
-    width: 20rem;
-    height: 20rem;
-    margin-top: 2rem;
-    border-radius: 50%;
-    margin-left: -10rem;
-    background: linear-gradient(75deg, #fff, transparent);
-    position: absolute;
-    transition: transform 1s;
-}
 
-.main__header-circle:hover {
-    transform: translate(50%, 50%) scale(1);
-}
+
+
 
 .language__image {
     position: relative;
@@ -90,14 +80,18 @@
 
     .main__header-container {
         gap: 0;
+        grid-template-columns: 1fr 1fr;
     }
 
-    .main__header-circle {
-        width: 16rem;
-        margin-left: 1rem;
-        height: 16rem;
-    }
+   
+    .image {
 
+        position: relative;
+        margin-top: 2rem;
+        display: block;
+        object-fit: cover;
+        width: 80%;
+    }
     .language__image {
         margin-top: -5rem;
         margin-left: 2rem;
@@ -115,6 +109,7 @@
         text-align: center;
         margin-bottom:1rem;
     }
+    
 
 
 
