--- a/company-web/src/index.css
+++ b/company-web/src/index.css
@@ -67,7 +67,7 @@ img{
     color: var(--color-gray-100);
     width: fit-content;
     margin: 0 auto;
-    padding: 0.9rem 2rem;
+    padding: 0..9rem 2rem;
     background: var(--color-primary);
     border-radius: 1.5rem;
     transition: var(--transition);
@@ -100,6 +100,13 @@ img{
     }
     h2{
         font-size: 1.6rem;
+    }
+    .btn.lg{
+        padding: 1rem 2.5rem;
+        position: relative;
+        margin-left: 3rem;
+    border-radius: 1rem;
+    font-size: 1rem;
     }
 }
 @media screen and (max-width:600px ){
