--- a/company-web/src/Pages/About/about.css
+++ b/company-web/src/Pages/About/about.css
@@ -57,6 +57,7 @@
     text-align:center;
 
 }
+
 .web__p{
     text-align:center;
     font-size:1.5rem;
@@ -64,8 +65,69 @@
     font-weight: 200;
     color: #fff;
 }
+
+.Link__left{
+    display: inline-block;
+    width: 5.5rem;
+    margin-left: 5rem;
+    height: fit-content;
+    text-align :center;
+    border:0;
+    border: 1px solid var(--color-primary);
+    background: var(--color-primary);
+    border-radius: 20px;
+    transition:color .5s;
+}
+.link{
+    color: #000;
+}
+
+
+.Link__left:hover{
+   background: var(--color-secondary)
+}
+    
+.left{
+    width: 1.5rem;
+    margin-left: 2rem;
+    position: relative;
+    
+}
+
+.Link__right{
+    display: inline-block;
+    width: 5.5rem;
+    margin-left: 5rem;
+    height: fit-content;
+    text-align :center;
+    border:0;
+    border: 1px solid var(--color-primary);
+    background: var(--color-primary);
+    border-radius: 20px;
+    transition:color .5s;
+}
+.link{
+    color: #000;
+}
+
+
+.Link__right:hover{
+   background: var(--color-gray-200);
+}
+    
+.rigth{
+    width: 1.5rem;
+    margin-left: 2rem;
+    position: relative;
+    
+}
+
+
 @media screen and (max-width: 768px){
     .about{
+        
+        width: 100%;
+        height: auto;
         display:inline-block;
         
     }
@@ -85,5 +147,43 @@
         height: auto;
         margin-top:1.2rem;
         margin-left: 5rem;
+    }
+    .Link__left{
+        margin-top: 2rem;
+    }
+    .Link__right{
+        margin-top:2rem;
+    }
+}
+@media screen and (max-width: 1024px){
+    .about{
+        
+        width: 100%;
+        height: 100%;
+        display:inline-block;
+        
+    }
+    .image{
+        margin-left: 5rem;
+    }
+    .about__company{
+        width: 50vw;
+        margin-top:2rem;
+        height: auto;
+        white-space: pre-wrap;
+        margin-left: 5rem;
+        text-align:center;
+    }
+    .about__website{
+        width: 50vw;
+        height: auto;
+        margin-top:1.2rem;
+        margin-left: 5rem;
+    }
+    .Link__left{
+        margin-top: 2rem;
+    }
+    .Link__right{
+        margin-top:2rem;
     }
 }
