--- a/company-web/src/Pages/Home/home.css
+++ b/company-web/src/Pages/Home/home.css
@@ -51,6 +51,33 @@
 
 
 
+.Link__detail{
+    display: inline-block;
+    width: 5.5rem;
+    margin-left: 5rem;
+    height: auto;
+    text-align :center;
+    border:0;
+    border: 1px solid var(--color-primary);
+    background: var(--color-primary);
+    border-radius: 20px;
+    transition:color .5s;
+}
+.link{
+    color: #000;
+}
+
+
+.Link__detail:hover{
+   background: var(--color-secondary)
+}
+    
+.right{
+    width: 1.5rem;
+    margin-left: 2rem;
+    position: relative;
+    
+}
 
 
 .language__image {
@@ -109,6 +136,34 @@
         text-align: center;
         margin-bottom:1rem;
     }
+    .Link__detail{
+        display: inline-block;
+        width: 5.5rem;
+        margin-left: 5rem;
+        height: auto;
+        text-align :center;
+        border: 1px solid var(--color-primary);
+        background: var(--color-primary);
+        border-radius: 20px;
+        transition:color .5s;
+    }
+    .Link__detail::after{
+        background: var(--color-secondary)
+     }
+    .link{
+        color: #000;
+    }
+
+    
+    
+        
+    .right{
+        width: 1.5rem;
+        margin-left: 2rem;
+        position: relative;
+        
+    }
+    
     
 
 
